--- a/week1/index.html
+++ b/week1/index.html
@@ -18,14 +18,10 @@
         <li class="Item3">Item3</li>
         <li class="Item4">Item4</li>
       </nav>
-      <!--  -->
-      <nav class="nav-ham-menu">
-        <div class="ham-menu">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-      </nav>
+      <div class="menu-icon">
+        <img src="burgericon.png" alt="Menu" class="burger-icon" />
+        <img src="xicon.png" alt="Close" class="xicon" />
+      </div>
     </header>
     <header class="welcome"><h1>Welcome to MyHome</h1></header>
 
